--- a/css/style.css
+++ b/css/style.css
@@ -23,18 +23,26 @@ body {
     color: white;
     position: absolute;
     font-size: 95px;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
+    
+    bottom:7%;
     width: 100%;
     height:200px;
     z-index: 50;
     margin: auto auto;
-    line-height: 200px;
     text-align: center;
     display: none;
 }
 
+.message p{
+    font-size: 60px;
+    font-family: 'Open Sans';
+    color: white;
+}
+.message a{
+    font-size: 25px;
+    font-family: 'Open Sans';
+    color: white;
+    text-decoration: none;
+}
 
 
